# AEnvironment

./: .pre-commit-config.yaml  README.md  rolebinding.yaml
.github/workflows/: aenv_base_image_build.yml  aenv_image_build.yml  builtin_image_build.yml  deploy.yml  release_pypi_task.yml  sample_env_image_build.yml  template_image_build.yml
aenv/: pyproject.toml
aenv/builtin-envs/mini-terminal/: Dockerfile
aenv/builtin-envs/swebench/: Dockerfile  config.json  requirements.txt
aenv/builtin-envs/swebench/src/: docker_cli.py  swe_bench_env.py
aenv/builtin-envs/swebench/src/eval/: aenv_evaluation.py  constants.py  grading.py  python_log_parser.py  shell_runner.py  swe_model.py
aenv/builtin-envs/swebench/test/: __init__.py  swebench_usage_test.py
aenv/builtin-envs/tau2/: requirements.txt
aenv/builtin-envs/terminalbench/: Dockerfile
aenv/examples/all_in_one/: README.md
aenv/examples/mini-program/: README.md
aenv/examples/tau2_rl/: README.md
aenv/src/cli/cmds/: common.py  run.py
aenv/src/cli/templates/default/: Dockerfile
aenv/src/cli/utils/mcp/: mcp_task_manager.py
api-service/: main.go
api-service/controller/: env_instance.go
api-service/service/: cleanup_service.go  env_instance.go  schedule_client.go
controller/: Dockerfile  go.mod  go.sum
controller/cmd/: main.go
controller/pkg/aenvhub_http_server/: aenv_pod_cache.go  aenv_pod_handler.go  util.go  util_test.go
controller/pkg/constants/: common.go
controller/pkg/metrics/: metrics.go
controller/pkg/model/: aenvhub_env.go  environment.go
controller/pkg/storage/: env_storage_interface.go
deploy/: values.yaml
deploy/controller/: values.yaml
deploy/controller/templates/: service.yaml
docs/: README.md  _config.yml  _toc.yml  intro.md  references.bib  roadmap.md
docs/architecture/: architecture.md
docs/development/: contributing.md  development.md  sandbox_integrating.md
docs/examples/: agent_as_env.md  all_in_one.md  mini_program.md  swe_benchmark.md  tau2_rl.md  weather_tools.md
docs/getting_started/: concepts.md  deployment.md  installation.md  quickstart.md
docs/guide/: cli.md  environments.md  sdk.md
docs/images/: .gitkeep
